# UltraDevice-AI

./: CODE_OF_CONDUCT.md  COMMIT_LOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt
data/: ambient_summer.csv  cloudiness.csv  motion_profile_commute.csv  sky_irradiance_clear.csv
docs/: glossary.md  overview.md  roadmap.md  safety_ethics.md
examples/: usage_cli.md  vision_demo_scenario.md
examples/scenarios/: day_walk.json
scripts/: push_granular.sh  push_ultradevice.sh
specs/: ai_module.md  communication_system.md  core_architecture.md  dna_data_model.md  energy_system.md  environment_adaptation.md  evolution_protocols.md  math_models.md  power_budget.md  stealth_and_sensors.md  storage_and_cpu.md  wearable_materials.md
src/: __init__.py  aging.py  ai.py  battery.py  cli.py  config.py  energy.py  optimizer.py  plotter.py  policy.py  power.py  powertrain.py  profiles.py  randomize.py  report.py  simulate.py  sizing.py  telemetry.py  thermal.py  validate.py
src/UltraDevice/: __init__.py  ai.py  cli.py  energy.py  evolution.py  models.py  power.py  sensors.py
test/: test_battery_thermal.py  test_models.py  test_power_budget.py  test_powertrain_sizing.py  test_simulate.py
